--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   },
   "homepage": "https://github.com/ashjha03/Postify#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.1",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "path": "^0.12.7",
